--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  background-image: radial-gradient(circle, #5c0067 0%, #00d4ff 100%);
+  height: 100vh;
   display: flex;
 }
 
